--- a/src/main/webapp/frontend/index.html
+++ b/src/main/webapp/frontend/index.html
@@ -227,5 +227,10 @@
                 <li>没发现什么东西</li>
         </#if>
     </ul>
+
+
+
+    <a href="startActivityListener.html">开始时间监听</a><br><br>
+    <a href="stopActivityListener.html">结束时间监听</a>
 </body>
 </html>
